--- a/styles/Tags.module.css
+++ b/styles/Tags.module.css
@@ -8,7 +8,10 @@
 
 .tags {
     width: 100%;
-    gap: 2%;
+}
+
+.tags > * + * {
+    margin-left: 2%;
 }
 
 
